# AutoCPD

./: .gitignore  .readthedocs.yaml  LICENSE.txt  MANIFEST.in  README.md  RNStrong21T2N2500R10SaveForR.py  RNStrongoracle-revisionTestR10.r  RNWeak21T2N2500R10SaveForR.py  RNWeakoracle-revisionTestR10.r  pyproject.toml  testUtils.py  tf27.yml
.history/: README_20221028154309.md  README_20221029084201.md
.history/Code/: DataSetGen_20221018160158.py  RealDataCPDTestNewSeq1_20221018160158.py  RealDataCPDTestNewSeq2_20221018160158.py  RealDataCPDTestNewSeq3_20221018160158.py  RealDataKS25_20221018160158.py  ResNetN1kE8tanhDecay10kScale_20221029160203.py  ResNetN1kE8tanhStrongDecay10kScale copy_20221029160203.py  ResNetN1kE8tanhStrongDecay10k_20221018160158.py  ScenarioCRho0Train_20221022222716.py  ScenarioS1Rho07Predict_20221022192034.py  ScenarioS1Rho07Predict_20221029104813.py  ScenarioS1Rho07Train_20221022190121.py  ScenarioS1Rho07Train_20221029104813.py  ScenarioS1Rho0Predict_20221022214921.py  ScenarioS1Rho0Predict_20221029091551.py  ScenarioS1Rho0Train_20221022212513.py  ScenarioS1Rho0Train_20221029084201.py  ScenarioS2RhoRandomPredict_20221023105138.py  ScenarioS2RhoRandomPredict_20221029104813.py  ScenarioS2RhoRandomTrain_20221023105619.py  ScenarioS2RhoRandomTrain_20221029104813.py  ScenarioS3Rho0Predict_20221022222735.py  ScenarioS3Rho0Predict_20221029104813.py  ScenarioS3Rho0Train_20221028170711.py  ScenarioS3Rho0Train_20221029104813.py  func_20220922215435.R  utils_20221023103424.py
Code/: BIC-Strong-rep30-oracle.r  BIC-Strong-rep30.r  BIC-Strong.r  BIC-Weak-rep30-oracle.r  BIC-Weak-rep30.r  BIC-Weak.r  BICStrongPlot.py  BICWeakPlot.py  DS1ReportWilcox.py  DS1StrongResult.py  DS1StrongResultMosumAdjust.py  DS1StrongResultWilcoxR.py  DS1WeakResult.py  DS1WeakResultMosumAdjust.py  DS1WeakResultWilcoxR.py  DS3ReportWilcox.py  DS3StrongResult.py  DS3StrongResultMosumAdjust.py  DS3StrongResultWilcoxR.py  DS3StrongWilcox.r  DS3WeakResult.py  DS3WeakResultMosumAdjust.py  DS3WeakResultWilcoxR.py  DS3WeakWilcox.r  DataGenForRStrong.py  DataGenForRStrong2ClassTesting.py  DataGenForRStrongRep30.py  DataGenForRWeak.py  DataGenForRWeak2ClassTesting.py  DataGenForRWeakRep30.py  DataSetGen.py  RNStrong21T2N2500R10SaveForR.py  RNStrongoracle-revisionTestR10.r  RNWeak21T2N2500R10SaveForR.py  RNWeakoracle-revisionTestR10.r  RealDataCPDTestNewSeq1.py  RealDataCPDTestNewSeq2.py  RealDataCPDTestNewSeq3.py  RealDataKS25.py  ResNetN1kE8tanhDecay10kScale.py  (+42 more)
datasets/BIC/: Confusion_matrixBIC_strong  y_pred_bic_rstrong.npy  (+14 more)
docs/: conf.py  index.rst  requirements.txt
test/: RealDataHASC.py  confusion_matrix.npy  test_deep_nn.py  test_load_pretrained_model.py  test_simple_nn.py
(+1313 files in other folders)
