[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autocpd"
version = "0.1.1"
authors = [
    { name="Jie Li", email="j.li196@lse.ac.uk" }
]
description = "The implementation of algorithm in AutoCPD"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"